# investments

./: .env.example  docker-compose.yml
back-end/: Cargo.toml
back-end/src/: error.rs  main.rs  middlewares.rs  pagination.rs
back-end/src/financial/: facts.rs  financial.rs  info.rs  mod.rs
back-end/src/portfolio/: dto.rs  list_accounts.rs  mod.rs  models.rs  new_account.rs
back-end/src/portfolio/account_details/: dividends.rs  mod.rs  open_positions.rs
back-end/src/portfolio/platform/: ibkr.rs  mod.rs
back-end/src/portfolio/statement/: delete_statement.rs  list_statements.rs  mod.rs  new_statement.rs
back-end/src/user/: dto.rs  login.rs  mod.rs  models.rs  register.rs  user_details.rs
back-end/src/users/: login.rs  mod.rs  models.rs  register.rs
front-end/: .env.example  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
front-end/src/: App.tsx  Home.tsx  main.tsx  routeTree.gen.ts
front-end/src/api/: edgar.ts  financial.ts  index.ts  openbb.ts  portfolio.ts  user.ts
front-end/src/components/: ApiError.tsx  DatePicker.tsx  Header.tsx  LineChart.tsx  PopOutCard.tsx  PriceChart.tsx  TablePagination.tsx
front-end/src/components/StockAnalysis/: Dividends.tsx  Financials.tsx  HistoricalPrice.tsx  Info.tsx  context.ts  index.tsx  utils.ts
front-end/src/components/form/: ErrorInfo.tsx  PasswordField.tsx  SubmitButton.tsx  TextField.tsx
front-end/src/components/ui/: button.tsx  pagination.tsx  password.tsx
front-end/src/routes/: __root.tsx  _auth.tsx  _unauth.tsx
front-end/src/routes/_auth/: -wef.lazy.tsx  index.tsx
front-end/src/routes/_auth/account/$account_id/: -dividends.tsx  -open_positions.tsx  index.tsx
front-end/src/routes/_auth/analysis/stock/: -analysis_charts.tsx  -dividends.tsx  -fallback_card.tsx  -financials.tsx  -historical_price.tsx  -info.tsx  -utils.ts  index.tsx
front-end/src/routes/_unauth/: login.tsx
openbb/: Dockerfile  main.py
sec/: Cargo.toml
sec/src/: company.rs  company_facts.rs  error.rs  lib.rs
(+7 files in other folders)
