[package]
name = "back-end"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
ibkr-activity-statement-parser = { git = "https://github.com/MaximeFarrugia/ibkr-activity-statement-parser.git", version = "0.1.0" }
mongodb = "3.2.4"
problem_details = { version = "0.8.0", features = ["axum"] }
rust_decimal = "1.37.2"
scrypt = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
