[package]
name = "back-end"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie", "multipart"] }
bson = { version = "2.15.0", features = ["chrono", "chrono-0_4"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
ibkr-activity-statement-parser = { git = "https://github.com/MaximeFarrugia/ibkr-activity-statement-parser.git", version = "0.1.0" }
mongodb = "3.2.4"
problem_details = { version = "0.8.0", features = ["axum"] }
reqwest = { version = "0.12.23", features = ["gzip", "json"] }
rust_decimal = "1.37.2"
scrypt = "0.11.0"
sec = { version = "0.1.0", path = "../sec" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
time = "0.3.41"
tokio = { version = "1.47.1", features = ["full"] }
