[package]
name = "sec"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json"] }
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
